--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -625,11 +625,6 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-r9Ma4vVYsF {
-  padding-top: 90px;
-  padding-bottom: 30px;
-  background-color: #232323;
-}
 .cid-r9Ma4vVYsF H1 {
   text-align: center;
 }
@@ -644,8 +639,8 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-rp8BM8xtWP {
-  padding-top: 75px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/petrarca.jpg");
 }
 .cid-rp8BM8xtWP H1 {
@@ -656,40 +651,40 @@ section.lazy-placeholder:after {
   color: #c1c1c1;
 }
 .cid-rp8EiqPXZ3 {
-  padding-top: 75px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/house-4.jpg");
 }
 .cid-rp8EiqPXZ3 H1 {
   color: #cccccc;
 }
 .cid-rp8EIOiGj5 {
-  padding-top: 75px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .cid-rp8EIOiGj5 H1 {
   color: #cccccc;
 }
-.cid-rucWHE80Py {
-  padding-top: 30px;
-  padding-bottom: 15px;
+.cid-rP4a9yqySP {
+  padding-top: 15px;
+  padding-bottom: 75px;
   background-color: #232323;
 }
-.cid-rucWHE80Py .mbr-slider .carousel-control {
+.cid-rP4a9yqySP .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-rucWHE80Py .mbr-slider .carousel-control-prev {
+.cid-rP4a9yqySP .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-rucWHE80Py .mbr-slider .carousel-control-next {
+.cid-rP4a9yqySP .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-rucWHE80Py .mbr-slider .modal-body .close {
+.cid-rP4a9yqySP .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-rucWHE80Py .mbr-gallery-item > div::before {
+.cid-rP4a9yqySP .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
   left: 0;
@@ -701,13 +696,13 @@ section.lazy-placeholder:after {
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
 }
-.cid-rucWHE80Py .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+.cid-rP4a9yqySP .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-rucWHE80Py .mbr-gallery-item > div:hover:before {
+.cid-rP4a9yqySP .mbr-gallery-item > div:hover:before {
   opacity: 0.3 !important;
 }
-.cid-rucWHE80Py .mbr-gallery-title {
+.cid-rP4a9yqySP .mbr-gallery-title {
   font-size: .9em;
   position: absolute;
   display: block;
@@ -717,7 +712,7 @@ section.lazy-placeholder:after {
   color: #fff;
   z-index: 2;
 }
-.cid-rucWHE80Py .mbr-gallery-title:before {
+.cid-rP4a9yqySP .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
